--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <div class="wrapper-container">
          <div class="container">
             <h1>SHARE BOOST</h1>
-            <p>A user-friendly automated website that utilizes your browser's cookies to streamline the process of sharing posts on Facebook using the provided URL.</p>
+            <p>Share Ảo Qua Appstate Facebook.</p>
          </div>
          <div class="form-wrapper">
             <form onsubmit="submitForm(event)" class="form-container">
@@ -47,7 +47,7 @@
          <div class="container">
             <h1>SHARE BOOST</h1>
             <h4>ABOUT US</h4>
-            <p>You can find our open-source repository <a href="https://www.pornhub.com" style="text-decoration: none; color: blue;">here</a>, encouraging developers to contribute, learn, and customize the website</p>
+            <p>Được Thực Hiện Bởi NemG <a href="https://thenamk3.net" style="text-decoration: none; color: blue;">here</a></p>
          </div>
       </div>
       <style>
