--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </form>
          </div>
          <div class="container" id="process-container">
-            <h1>SHARE BOOST</h1>
-            <h4>PROCESSING:</h4>
+            <h1>SHARE ẢO FACEBOOK</h1>
+            <h4>Đang Tiến Hành Chạy ID:</h4>
             <div id="processing">
             </div>
          </div>
