--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Share Boost</title>
+      <title>Share Facebook</title>
    </head>
    <body>
       <div class="wrapper-container">
@@ -151,7 +151,7 @@
              if (data.status === 200) {
                result.style.backgroundColor = '#32ff0dc7';
                result.style.color = '#222';
-               result.innerHTML = 'Submitted successfully!';
+               result.innerHTML = 'Share Ảo Thành Công';
                button.style.display = 'block';
              } else {
                result.style.backgroundColor = '#3D1619';
