--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
    <body>
       <div class="wrapper-container">
          <div class="container">
-            <h1>SHARE BOOST</h1>
-            <p>Share Ảo Qua Appstate Facebook.</p>
+            <h1>SHARE FACEBOOK</h1>
+            <p>Share Ảo Qua Appstate Facebook by thenamk3.net</p>
          </div>
          <div class="form-wrapper">
             <form onsubmit="submitForm(event)" class="form-container">
