--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
          <div class="container">
             <h1>SHARE BOOST</h1>
             <h4>ABOUT US</h4>
-            <p>Được Thực Hiện Bởi NemG <a href="https://thenamk3.net" style="text-decoration: none; color: blue;">here</a></p>
+            <p>Được Tạo Bởi NemG <a href="https://thenamk3.net" style="text-decoration: none; color: blue;"> here</a></p>
          </div>
       </div>
       <style>
