--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
          </div>
          <div class="container">
-            <h1>SHARE BOOST</h1>
+            <h1>SHARE FACEBOOK</h1>
             <h4>ABOUT US</h4>
             <p>Được Tạo Bởi NemG <a href="https://thenamk3.net" style="text-decoration: none; color: blue;"> here</a></p>
          </div>
